fix: correct app name from Matab to Maktab-ul-Lugha

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <title>Matab-ul-Lugha - The School of Language</title>
+  <title>Maktab-ul-Lugha - The School of Language</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
